# ForecastConsoleApp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  ConsoleInterface.cpp  ConsoleInterface.h  HelpStructures.h
lib/Forecast/: City.h  Forecast.h
